--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -141,23 +141,27 @@ In this project we will assume that an event log is given by the user, i.e., dat
 \section{Project Plan}
 
 \subsection{Milestones}
+
 The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided into nine milestones.  
 \begin{center}
 	\captionof{table}{Overview Milestones }
-  \begin{tabular}{  m{6cm} m{8cm} m{2cm} }
+  \begin{tabular}{ m{0.4cm} m{5cm} m{8.5cm} m{2cm} }
   	\hline
-		Milestone & Description & Deadline \\ \hline
-		Project Initiation document & The Project Initiation Document provides all of the key information required to start and run the project. This includes the project description, business case, feasibility study and a project team presentation.  & 19/04/2019 \\ \hline
-		Requirements Specification document & The Requirements Specification document contains functional and none functional requirements such as a set of use cases to describe the system interactions. & 29/04/2019 \\ \hline
-		Design Analysis and dummy P.o.C. & The final document is a description about the planned software system architectural background and a proof of concept visualizing the main UI components. & 13/05/2019 \\ \hline
-		Sprint 1 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart}  & 24/05/2019 \\ \hline
-		Sprint 2 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 07/06/2019 \\ \hline
-		Sprint 3 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 21/06/2019 \\ \hline
-		Testing, assessment and deployment & The application is checked for accuracy and should be aviable for use. & 01/07/2019 \\ \hline
-		Final report on the project & The final report provides an overview about the project course and the result. & 08/07/2019 \\ \hline
+		ID & Milestone & Description & Deadline \\ \hline
+		1 & Project Initiation document & The Project Initiation Document provides all of the key information required to start and run the project. This includes the project description, business case, feasibility study and a project team presentation.  & 19/04/2019 \\ \hline
+		2 & Requirements Specification document & The Requirements Specification document contains functional and none functional requirements such as a set of use cases to describe the system interactions. & 29/04/2019 \\ \hline
+		3 & Design Analysis and dummy P.o.C. & The final document is a description about the planned software system architectural background and a proof of concept visualizing the main UI components. & 13/05/2019 \\ \hline
+		4 & Sprint 1 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart}  & 24/05/2019 \\ \hline
+		5 & Sprint 2 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 07/06/2019 \\ \hline
+		6 & Sprint 3 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 21/06/2019 \\ \hline
+		7 & Testing, assessment and deployment & The application is checked for accuracy and should be aviable for use. & 01/07/2019 \\ \hline
+		8 & Final report on the project & The final report provides an overview about the project course and the result. & 08/07/2019 \\ \hline
 	\end{tabular}
 \end{center}
+
 \subsection{Deliverables}
+    
+
 
 \subsection{Timetable}
 
