--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -150,7 +150,7 @@ The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided i
 		ID & Milestone & Description & Deadline \\ \hline
 		1 & Project Initiation document & The Project Initiation Document provides all of the key information required to start and run the project. This includes the project description, business case, feasibility study and a project team presentation.  & 19/04/2019 \\ \hline
 		2 & Requirements Specification document & The Requirements Specification document contains functional and none functional requirements such as a set of use cases to describe the system interactions. & 29/04/2019 \\ \hline
-		3 & Design Analysis and dummy P.o.C. & The final document is a description about the planned software system architectural background and a proof of concept visualizing the main UI components. & 13/05/2019 \\ \hline
+		3 & Design Analysis and dummy P.o.C. & The final document is a description about the planned system architectural background and a proof of concept visualizing the main UI components. & 13/05/2019 \\ \hline
 		4 & Sprint 1 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart}  & 24/05/2019 \\ \hline
 		5 & Sprint 2 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 07/06/2019 \\ \hline
 		6 & Sprint 3 code and documentation & {\color{red} TODO: sprint description depending on GANTT chart} & 21/06/2019 \\ \hline
@@ -160,8 +160,71 @@ The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided i
 \end{center}
 
 \subsection{Deliverables}
-    
+With each milestones various deliverables are created to monitor, document and verify the docuemnt progress.
+\newline
+\textbf{1 Project Initiation document:}
+\\
+\begin{itemize}
+	\item Finale project initiation document with key information about the project
+\end{itemize}
 
+\textbf{2 Requirements Specification document:}
+\\
+\begin{itemize}
+	\item Requiredments Specification document with functional und none functional requirements
+	\item Use case analysis
+\end{itemize}
+
+\textbf{3 Design analysis and dummy P.o.C:}
+\\
+\begin{itemize}
+	\item System and software architecture documentation
+	\item Frontend mockup
+\end{itemize}
+
+\textbf{4 Sprint 1 code and documentation }
+\\
+\begin{itemize}
+	\item Phyton components
+	\item Unit Test protocols
+	\item Code documentation
+\end{itemize}
+
+\textbf{5  Sprint 2 code and documentation }
+\\
+\begin{itemize}
+	\item Phyton components
+	\item Unit Test protocols
+	\item Code documentation
+\end{itemize}
+
+\textbf{6 Sprint 3 code and documentation }
+\\
+\begin{itemize}
+	\item Phyton components
+	\item Java Script components
+	\item Unit Test protocols
+	\item Code documentation
+\end{itemize}
+
+{\color{red} @all: should we write tests during the implementation? Could possibly save us a lot of trouble, but we have to select a test framework.
+Otherwise we can remove the Unit Test protocols
+}
+
+\textbf{7 Testing, assessment and deployment}
+\\
+\begin{itemize}
+	\item Testprotocols
+	\item Server configuration
+\end{itemize}
+
+\textbf{8 Final report on the project}
+\\
+\begin{itemize}
+	\item Final report
+\end{itemize}
+
+{\color{red} @all: Any other documents, reports, protocols or code artefacts required?}
 
 \subsection{Timetable}
 
