PID Deliverables added
Required web components added

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -216,6 +216,8 @@ Otherwise we can remove the Unit Test protocols
 \begin{itemize}
 	\item Testprotocols
 	\item Server configuration
+	\item Web API 
+	\item Webapplication
 \end{itemize}
 
 \textbf{8 Final report on the project}
