Self assesment/Gantt Chart included

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -22,6 +22,7 @@
 \newcolumntype{C}{>$c<$}
 \usepackage{empheq}
 \usepackage{caption}
+\usepackage{pdfpages}
 
 \geometry{ 						%Format titlepage (interrupted by newgeometry)
 	a4paper,
@@ -159,6 +160,8 @@ The project starts on the 09/04/2019 and ends on the 08/07/2019 and is divided i
 	\end{tabular}
 \end{center}
 
+\includepdf[landscape=true]{ganttChart.pdf} 
+
 \subsection{Deliverables}
 With each milestones various deliverables are created to monitor, document and verify the docuemnt progress.
 \newline
@@ -239,6 +242,10 @@ Otherwise we can remove the Unit Test protocols
 I am a Master student studying Mathematics and Data Science in parallel.  Moreover, I work as a student assistant in the field of Data Analytics / Business Intelligence. Due to my background in mathematics, I have a good understanding of theoretical foundations. Moreover, I am very interested in Data Science and already took many courses in that area. Since I took the course "Introduction to Data Science", I also worked with Python before, so that I should be able to implement an algorithm in Python.
 
 Though I have a strong theoretical background, I never worked on user interfaces or with web services, so that this aspect of the project could be challenging for me. 
+
+\subsection{Juan Garza}
+
+Juan Garza is a student at the RWTH University. He is currently in his 4th semester of studies towards a master’s degree in computer science. During his studies, he deepened his knowledge of process mining by attending the lecture “Business Process intelligence”. Moreover, he carried out a seminar on “Selected Topics in Process Mining”. He is familiar with Java and Python as programming languages. Besides school projects, he has no programming experience in “real world” environments which may represent a difficulty for him. 
 
 \subsection{Roles}
 
