spelling mistakes fixed

--- a/Project Initiation Document/Project Initiation Document.tex
+++ b/Project Initiation Document/Project Initiation Document.tex
@@ -156,7 +156,7 @@ For our project we will use Python as back-end programming language to implement
 
 \begin{itemize}
 	\item Flask 1.0.2 as web application framework
-	\item Phyton 3.7.2 as back-end programming language
+	\item Python 3.7.2 as back-end programming language
 	\item JavaScript as Front-end development language (Standard ECMAScript 2018)
 	\item Browser support (Google Chrome version $\geq$ 70, Firefox version $\geq$ 63, Maybe don't support IE/Edge)
 	\item {\color{red} TODO: Select HTML5 visualisation framework for petri nets [To be done until saturday]}
@@ -171,7 +171,7 @@ For our project we will use Python as back-end programming language to implement
 	\item highly customizable
 \end{itemize}
 
-\large{Phyton}
+\large{Python}
 \begin{itemize}
 	\item Specified by stackholder
 	\item highly used for datascience
@@ -281,7 +281,7 @@ With each milestones various deliverables are created to monitor, document and v
 \textbf{4 Sprint 1 code and documentation }
 \\
 \begin{itemize}
-	\item Phyton components
+	\item Python components
 	\item Unit Test protocols
 	\item Code documentation
 \end{itemize}
@@ -289,7 +289,7 @@ With each milestones various deliverables are created to monitor, document and v
 \textbf{5  Sprint 2 code and documentation }
 \\
 \begin{itemize}
-	\item Phyton components
+	\item Python components
 	\item Unit Test protocols
 	\item Code documentation
 \end{itemize}
@@ -297,7 +297,7 @@ With each milestones various deliverables are created to monitor, document and v
 \textbf{6 Sprint 3 code and documentation }
 \\
 \begin{itemize}
-	\item Phyton components
+	\item Python components
 	\item Java Script components
 	\item Unit Test protocols
 	\item Code documentation
